<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_slideshow_24"
            android:title="@string/slideshow" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_about"
            android:icon="@drawable/one"
            android:title="@string/about" />

        <item android:id="@+id/nav_sign_out"
            android:icon="@drawable/two"
            android:title="@string/sign_out" />
    </group>
</menu>